# NdkApp1

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/dcc/ndkapp1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/dcc/ndkapp1/: MainActivity.java  MyVideoView.java  Test.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dcc/ndkapp1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
